--- a/core/templates/reparacion/reparacion_list.html
+++ b/core/templates/reparacion/reparacion_list.html
@@ -82,7 +82,7 @@
                         <td>
                             <a href="{% url 'reparacion_edit' reparacion.id %}" class="btn btn-sm btn-outline-primary"
                                 title="Editar reparación">
-                                <i class="bi bi-pencil-square"></i>
+                                <i class="bi bi-pencil fs-4"></i>
                             </a>
                         </td>
                     </tr>
@@ -94,23 +94,24 @@
             {% if is_paginated %}
             <nav aria-label="Page navigation">
                 <ul class="pagination">
-                    {% if page_obj.has_previous %}
                     <li class="page-item">
-                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Anterior</a>
+                        <a class="page-link"
+                            href="{% if page_obj.has_previous %}?page={{ page_obj.previous_page_number }}{% endif %}">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
                     </li>
-                    {% endif %}
-
                     {% for num in page_obj.paginator.page_range %}
                     <li class="page-item {% if page_obj.number == num %}active{% endif %}">
                         <a class="page-link" href="?page={{ num }}">{{ num }}</a>
                     </li>
                     {% endfor %}
-
-                    {% if page_obj.has_next %}
                     <li class="page-item">
-                        <a class="page-link" href="?page={{ page_obj.next_page_number }}">Siguiente</a>
+                        <a class="page-link"
+                            href="{% if page_obj.has_next %}?page={{ page_obj.next_page_number }}{% endif %}"
+                            aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
                     </li>
-                    {% endif %}
                 </ul>
             </nav>
             {% endif %}
