--- a/core/templates/egreso/egreso_form.html
+++ b/core/templates/egreso/egreso_form.html
@@ -199,7 +199,7 @@ document.addEventListener('DOMContentLoaded', function () {
             });
         }
 
-        const fechaPicker = setupDatepicker("#id_fecha", fechaValue);
+        setupDatepicker("#id_fecha", fechaValue);
 
         if (fechaValue) {
             document.querySelector("#id_fecha").value = fechaValue;
