--- a/core/static/css/ventana.css
+++ b/core/static/css/ventana.css
@@ -53,7 +53,7 @@
     font-family: 'inter', sans-serif;
     font-size: 16px;
     align-items: center;
-    justify-content: center;;
+    justify-content: center;
 }
 
 .custom-delete-modal .modal-header {
